--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "background.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "",
