--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Display a compliment from an API every minute",
   "permissions": [
     "activeTab",
-    "https://jsonplaceholder.typicode.com/posts/1"
+    "{{apiURL}}"
   ],
   "background": {
     "scripts": ["background.js"],
