--- a/package.json
+++ b/package.json
@@ -6,7 +6,24 @@
   "main": "background.js",
   "scripts": {
     "test": "mocha",
-    "build": "node build.js"
+    "build": "node build.js",
+    "test:coverage": "nyc --reporter=text mocha"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "background.js",
+      "popup.js"
+    ],
+    "exclude": [
+      "test/*",
+      "build.js"
+    ],
+    "check-coverage": true,
+    "lines": 90,
+    "statements": 90,
+    "functions": 90,
+    "branches": 90
   },
   "keywords": [],
   "author": "",
@@ -16,6 +33,7 @@
     "jsdom": "^24.0.0",
     "mocha": "^10.4.0",
     "node-fetch": "^3.3.2",
+    "nyc": "^15.1.0",
     "sinon": "^17.0.1"
   }
 }
