--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "mocha",
     "build": "node build.js",
-    "test:coverage": "nyc --reporter=text mocha"
+    "test:coverage": "c8 --reporter=text mocha"
   },
   "nyc": {
     "all": true,
@@ -29,6 +29,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "c8": "^9.1.0",
     "chai": "^5.1.0",
     "jsdom": "^24.0.0",
     "mocha": "^10.4.0",
