--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "node-fetch": "^3.3.2",
     "nyc": "^15.1.0",
     "sinon": "^17.0.1"
+  },
+  "dependencies": {
+    "cross-zip": "^4.0.1"
   }
 }
