--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Display a compliment from an API every minute",
   "permissions": [
     "activeTab",
-    "{{apiURL}}"
+    "alarms"
   ],
   "background": {
     "scripts": ["background.js"],
