--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Compliments Extension",
   "version": "1.0",
   "description": "Display a compliment from an API every minute",
   "permissions": [
-    "activeTab",
     "alarms",
+    "storage"
+  ],
+  "host_permissions": [
     "https://complimentsapi-274811442e1d.herokuapp.com/"
   ],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/icon16.png",
