--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,21 @@
 {
   "manifest_version": 3,
   "name": "Compliments Extension",
+  "version": "1.0",
+  "permissions": ["alarms", "storage", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "host_permissions": [
+    "https://complimentsapi-274811442e1d.herokuapp.com/*"
+  ]
 }
