--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Compliments Extension",
   "version": "1.0",
-  "permissions": ["alarms", "storage", "activeTab"],
+  "permissions": ["alarms", "storage", "activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
   },
